<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MeishiActivity!</string>
    <string name="app_name">Meishi</string>
    <string name="search_hint">请输入店名以搜索</string>
    <string name="main_home">首页</string>
    <string name="main_collect">我的收藏</string>
    <string name="main_my_info">我的资料</string>
    <string name="menu_search">广场</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="shop_detail_min_send">起送金额：</string>
    <string name="shop_detail_per_people">人均消费：</string>
    <string name="shop_detail_shop_title">商户详情</string>
    <string name="shop_detail_send_scope">送餐范围：</string>
    <string name="shop_detail_send_introduction">送餐说明：</string>
    <string name="shop_detail_comment_title">消费点评</string>
    <string name="shop_detail_dianwaimai">点 外 卖</string>
    <string name="dish_type">暂无</string>
    <string name="order_condition">已点:0份 共0.0元</string>
    <string name="order_return">返回</string>
    <string name="order_next">下一步</string>
    <string name="str_loading_more">点击查看更多</string>
    <string name="confirm_order">请确认您的菜单</string>
    <string name="order_allcose">总价:</string>
    <string name="order_people">用餐人数:</string>
    <string name="order_detail">订单详情</string>
    <string name="order_note">备注(特别说明)</string>
    <string name="note_default">（如有需要特别说明的地方，请添加备注）</string>
    <string name="order_back">上一步</string>
    <string name="clear_search">清空搜索记录</string>
    <string name="home_title">美 ‧ 食</string>
    <string name="retry">重试</string>
    <string name="loading_message">正在获取数据，请稍候...</string>
    <string name="start_price">起送金额:</string>
    <string name="global_loading">正在获取数据，请稍候...</string>
    <string name="list_more_exception">出现未知错误,请稍后再试</string>
    <string name="list_timeout_text">,重试</string>
    <string name="total_count">已选：0</string>
    <string name="total_amount">共0.0元</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="address">地址:</string>
    <string name="modify_address">修改地址</string>
    <string name="my_order">我的订单</string>
    <string name="my_address">我的地址</string>
    <string name="back">返回</string>
    <string name="gps_city">GPS定位</string>
    <string name="gps_positioning">正在定位城市...</string>
    <string name="hot_cities">热门城市</string>

</resources>