<?xml version="1.0" encoding="utf-8"?>
<TabHost
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@android:id/tabhost"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout
    	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0.0dip"
			android:layout_weight="1.0" />
		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:layout_weight="0.0" />
		<RadioGroup
			android:id="@+id/main_radio"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:background="@drawable/maintab_toolbar_bg"
			android:orientation="horizontal"
			android:layout_gravity="bottom">
			<RadioButton
				android:id="@+id/radio_button1"
				android:checked="true"
				android:tag="radio_button1"
				android:text="@string/main_home"
				android:drawableTop="@drawable/icon_home"
				style="@style/main_tab_bottom" />
			<RadioButton
				android:id="@+id/radio_button2"
				android:tag="radio_button2"
				android:text="@string/main_collect"
				android:drawableTop="@drawable/icon_meassage"
				style="@style/main_tab_bottom" />
			<RadioButton
				android:id="@+id/radio_button3"
				android:tag="radio_button3"
				android:text="@string/main_my_info"
				android:drawableTop="@drawable/icon_selfinfo"
				style="@style/main_tab_bottom" />
			<RadioButton
				android:id="@+id/radio_button4"
				android:tag="radio_button4"
				android:text="@string/menu_search"
				android:drawableTop="@drawable/icon_square"
				style="@style/main_tab_bottom" />
			<RadioButton
				android:id="@+id/radio_button5"
				android:tag="radio_button5"
				android:text="@string/more"
				android:drawableTop="@drawable/icon_more"
				style="@style/main_tab_bottom" />
		</RadioGroup>
	</LinearLayout>
</TabHost>
