<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/header_back" />

    <LinearLayout
        android:id="@+id/bodyLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18.0dip"
            android:layout_marginLeft="6.0dip"
            android:text="@string/gps_city" />

        <TextView
            android:id="@+id/gpsCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps_positioning" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_cities" />

        <ListView
            android:id="@+id/hotCityList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="#ffc2c2c2"
            android:dividerHeight="1.0dip"
            android:visibility="gone" />
    </LinearLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/list_empty" />

</LinearLayout>