<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/main_bg">
    <!-- 标题 -->
    <TextView
    	android:id="@+id/title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:textSize="20.0sp"
    	android:textColor="#ffffffff"
    	android:background="@drawable/logo_bg" />
    <!-- 菜单目录 -->
    <LinearLayout
    	android:id="@+id/category"
    	android:gravity="center_vertical"
		android:background="@drawable/catalog_bg"
		android:paddingLeft="10.0dip" 
		android:paddingRight="5.0dip"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:minWidth="40.0dip" 
		android:layout_below="@id/title">
		<Button
			 android:id="@+id/selectButton"
			android:textSize="16.0sp"
			android:textColor="#ffffffff"
			android:gravity="left|center"
			android:background="@drawable/selector_bg_input"
			android:paddingLeft="14.0dip"
			android:paddingTop="4.0dip"
			android:paddingRight="30.0dip"
			android:paddingBottom="5.0dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4.0dip"
			android:layout_marginBottom="4.0dip"
			android:minWidth="140.0dip"
			android:text="@string/dish_type"
			android:singleLine="true"
			android:shadowColor="#00000000" />
		<TextView
			android:id="@+id/total"
			android:textSize="14.0sp"
			android:textColor="#ff000000"
			android:gravity="right|center"
			android:paddingRight="14.0dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10.0dip"
			android:text="@string/order_condition"
			android:singleLine="true"
			android:layout_gravity="right|center" />
	</LinearLayout>
	<GridView
		android:id="@+id/gridView"
		android:fadingEdge="none"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginBottom="40.0dip"
		android:listSelector="#00000000"
		android:cacheColorHint="#00000000"
		android:numColumns="auto_fit"
		android:layout_below="@id/category" />
	<LinearLayout
		android:layout_gravity="bottom"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		style="@style/step_bg">
		<Button
			android:id="@+id/back"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/order_return"
			android:layout_weight="1.0"
			style="@style/left_step" />
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/step_1"
			style="@style/step_pic" />
		<Button
			android:id="@+id/next"
			android:textSize="16.0sp"
			android:textColor="#ffffffff"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/order_next"
			android:shadowColor="#00000000"
			android:layout_weight="1.0"
			style="@style/right_step" />
	</LinearLayout>
</RelativeLayout>
