<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_people"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="0"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_allcose"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:textColor="#ffcc0033"
            android:textSize="24.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalLayout"
        android:orientation="vertical"
        android:paddingBottom="10.0dip"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12.0dip"
            android:text="@string/order_detail" />

        <ListView
            android:id="@+id/orderList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:divider="#ffe0e0e0"
            android:dividerHeight="1.0dip"
            android:fadeScrollbars="false"
            android:scrollbars="vertical" />
    </LinearLayout>

</LinearLayout>