<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/totalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_count"
            android:textColor="#ff333333"
            android:textSize="16.0dip" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/totalCount"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textColor="#ff333333"
            android:textSize="16.0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0" >

            <ListView
                android:id="@+id/dishCategoryList"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/alpha_bg"
                android:cacheColorHint="#00000000"
                android:drawSelectorOnTop="false"
                android:fadingEdge="vertical"
                android:fadingEdgeLength="5.0dip"
                android:scrollbars="vertical"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_toRightOf="@id/menuLayout"
            android:layout_weight="1.0" >

            <ListView
                android:id="@+id/dishList"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/alpha_bg"
                android:cacheColorHint="#00000000"
                android:drawSelectorOnTop="false"
                android:fadingEdge="vertical"
                android:fadingEdgeLength="5.0dip"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <include
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                layout="@layout/list_empty" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        style="@style/step_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/back"
            style="@style/left_step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/order_return" />

        <ImageView
            style="@style/step_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/step_1" />

        <Button
            android:id="@+id/next"
            style="@style/right_step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:shadowColor="#00000000"
            android:text="@string/order_next"
            android:textColor="#ffffffff"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>