<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
    <!-- 标题 -->
    <TextView
    	android:id="@+id/title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:textSize="20.0sp"
    	android:textColor="#ffffffff"
    	android:background="@drawable/logo_bg"
    	android:text="@string/confirm_order" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="40.0dip" >
        <LinearLayout
            android:id="@+id/totalLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10.0dip" >
                <!-- 总价 -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_allcose"
                        android:textColor="#ff000000"
                        android:textSize="16.0sp" />

                    <TextView
                        android:id="@+id/totalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:textColor="#ffcc0033"
                        android:textSize="24.0sp" />
                </LinearLayout>
                <!-- 用餐人数 -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_weight="1.0"
                    android:gravity="center_vertical" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_people"
                        android:textColor="#ff000000"
                        android:textSize="16.0sp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="6.0dip" >
                        <Button
                            android:id="@+id/minus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_btn_number_minus" />
                        <Button
                            android:id="@+id/people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/number_bg"
                            android:clickable="false"
                            android:textColor="#ff000000"
                            android:textSize="14.0sp"
                            android:text="0" />
                        <Button
                            android:id="@+id/plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_btn_number_plus" />
                    </LinearLayout>
                </LinearLayout>
           </LinearLayout>
           
           <LinearLayout
                android:id="@+id/detailLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalLayout"
                android:orientation="vertical"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip" >
                <TextView
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/order_detail" />
           </LinearLayout>
           <ListView
		    	android:id="@+id/order_list"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:divider="#ffe0e0e0"
		    	android:dividerHeight="1.0dip"
		    	android:layout_weight="1.0"
		    	android:scrollbars="vertical"
		    	android:fadeScrollbars="false" />
           <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="2.0dip"
                android:background="@drawable/status_bg"
                android:padding="8.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="送餐说明："
                    android:textColor="@color/Black"
                    android:textSize="14.0sp" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/Black"
                    android:textSize="14.0sp" />
            </LinearLayout>
            <!-- 备注 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip" >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:layout_weight="1.0"
                    android:text="@string/order_note"
                    android:textColor="#ff000000"
                    android:textSize="16.0sp" />
                <EditText
                    android:id="@+id/note"
                    android:layout_width="fill_parent"
                    android:layout_height="70.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:background="@drawable/selector_bg_inputname"
                    android:gravity="top|left|center"
                    android:hint="@string/note_default"
                    android:paddingBottom="4.0dip"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingTop="4.0dip"
                    android:textColor="#ff000000"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 导航条 -->
    <LinearLayout
        style="@style/step_bg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom" >
        <Button
            android:id="@+id/back"
            style="@style/left_step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/selector_bg_btn_fav"
            android:shadowColor="#00000000"
            android:text="@string/order_back"
            android:textColor="#ff000000" />
        <ImageView
            style="@style/step_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/step_2" />
        <Button
            android:id="@+id/next"
            style="@style/right_step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:shadowColor="#00000000"
            android:text="@string/order_next" />
    </LinearLayout>
</RelativeLayout>