<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 标题 -->
    <TextView
    	android:layout_width="fill_parent"
    	android:layout_height="40dip"
    	android:gravity="center"
    	android:textSize="20.0sp"
    	android:textColor="#ffffffff"
    	android:background="@drawable/shape_title"
    	android:text="@string/search" />
    <!-- 搜索栏 -->
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/search_bg"
    	android:paddingLeft="10.0dip"
    	android:paddingTop="6.0dip"
    	android:paddingRight="10.0dip"
    	android:paddingBottom="6.0dip"
    	android:gravity="center">
    	<EditText
    		android:id="@+id/keywords"
    		android:layout_width="0dip"
    		android:layout_height="wrap_content"
    		android:background="@drawable/search_box"
    		android:hint="@string/search_hint"
    		android:singleLine="true"
    		android:layout_weight="1.0" />
    	<Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5.0dip"
            android:background="@drawable/selector_bg_btn_fav"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip"
            android:text="@string/search"
            android:textColor="#ff000000"
            android:textSize="16.0sp" />
    </LinearLayout>
    <!-- 搜索结果列表 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0" >

        <ListView
            android:id="@+id/searchResults"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:divider="#ffc2c2c2"
            android:dividerHeight="1.0dip"
            android:visibility="gone" />

        <ListView
            android:id="@+id/searchHistory"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:divider="#ffc2c2c2"
            android:dividerHeight="1.0dip" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/del_bg"
        android:orientation="vertical"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip"
        android:gravity="bottom|center">
        <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50.0dip"
            android:layout_marginRight="50.0dip"
            android:background="@drawable/selector_bg_btn_fav"
            android:gravity="center"
            android:paddingBottom="8.0dip"
            android:paddingTop="8.0dip"
            android:text="@string/clear_search"
            android:textColor="#ff000000"
            android:textSize="18.0sp" />
    </LinearLayout>
</LinearLayout>